--- a/code/css/styles.css
+++ b/code/css/styles.css
@@ -7,6 +7,12 @@ body{}
   margin: 20px 0 0 20px;
 }
 
+.text{
+  display: inline-block;
+  color: #000;
+  font-size: 30px;
+}
+
 #start{
   height: 60px;
   width: 200px;
@@ -14,8 +20,8 @@ body{}
   font-size: 40px;
   background-color: #ff80ff;
   position: relative;
-  left: 400px;
-  top: 20px;
+  left: 250px;
+  top: 10px;
 }
 
 
