--- a/code/css/styles.css
+++ b/code/css/styles.css
@@ -64,82 +64,86 @@ body{}
 
 .hole{
   display: inline-block;
-  background-color: #000;
+  /*background-color: #000;*/
   width: 100px;
-  height: 40px;
-  border-radius: 50%;
+  height: 100px;
+  /*border-radius: 50%;*/
   position: absolute;
 }
 
 .active{
-  background-color: #FFF;
+  /*background-color: #FFF;*/
+  /*background-image: url("../images/minion1.png");*/
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 #hole13{
   margin-left: 55px;
-  margin-top: 95px;
+  margin-top: 35px;
 }
 #hole0{
   margin-left: 210px;
-  margin-top: 95px;
+  margin-top: 35px;
 }
 #hole1{
   margin-left: 365px;
-  margin-top: 95px;
+  margin-top: 35px;
 }
 #hole2{
   margin-left: 520px;
-  margin-top: 95px;
+  margin-top: 35px;
 }
 #hole3{
   margin-left: 675px;
-  margin-top: 95px;
+  margin-top: 35px;
 }
 #hole14{
   margin-left: 830px;
-  margin-top: 95px;
+  margin-top: 35px;
 }
 #hole11{
   margin-left: 120px;
-  margin-top: 230px;
+  margin-top: 175px;
 }
 #hole4{
   margin-left: 275px;
-  margin-top: 230px;
+  margin-top: 175px;
 }
 #hole5{
   margin-left: 430px;
-  margin-top: 230px;
+  margin-top: 175px;
 }
 #hole6{
   margin-left: 585px;
-  margin-top: 230px;
+  margin-top: 175px;
 }
 #hole12{
   margin-left: 740px;
-  margin-top: 230px;
+  margin-top: 175px;
 }
 #hole15{
   margin-left: 55px;
-  margin-top: 365px;
+  margin-top: 315px;
 }
 #hole7{
   margin-left: 210px;
-  margin-top: 365px;
+  margin-top: 315px;
 }
 #hole8{
   margin-left: 365px;
-  margin-top: 365px;
+  margin-top: 315px;
 }
 #hole9{
   margin-left: 520px;
-  margin-top: 365px;
+  margin-top: 315px;
 }
 #hole10{
   margin-left: 675px;
-  margin-top: 365px;
+  margin-top: 315px;
 }
 #hole16{
   margin-left: 830px;
-  margin-top: 365px;
+  margin-top: 315px;
 }
