--- a/code/css/styles.css
+++ b/code/css/styles.css
@@ -71,20 +71,33 @@ body{}
 
 .hole{
   display: inline-block;
-  /*background-color: #000;*/
   width: 100px;
   height: 100px;
-  /*border-radius: 50%;*/
   position: absolute;
-}
 
-.active{
-  /*background-color: #FFF;*/
-  /*background-image: url("../images/minion1.png");*/
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
 }
+
+.active{
+  /*background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;*/
+  animation-name: appear;
+  animation-duration: 0.5s;
+  animation-fill-mode: forwards;
+}
+
+.inactive{
+  /*background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;*/
+  animation-name: disappear;
+  animation-duration: 0.5s;
+  animation-fill-mode: forwards;
+}
+
 
 #hole13{
   margin-left: 55px;
@@ -153,4 +166,14 @@ body{}
 #hole16{
   margin-left: 830px;
   margin-top: 315px;
+}
+
+@keyframes appear {
+  0% {height: 0px; transform: scale(0);}
+  100%{height: 100px; transform: scale(1);}
+}
+
+@keyframes disappear {
+  0% {height: 100px; transform: scale(1);}
+  100%{height: 0px; transform: scale(0);}
 }
