--- a/code/css/styles.css
+++ b/code/css/styles.css
@@ -3,7 +3,9 @@ body{}
 #game-board{
   width: 1000px;
   height: 700px;
-  background-color: #80ccff;
+  background-image: url("../images/sky.png");
+  background-size: contain;
+  background-repeat: no-repeat;
   margin: 20px 0 0 20px;
 }
 
@@ -48,9 +50,23 @@ body{}
   width: 200px;
   color: #000;
   font-size: 40px;
-  background-color: #ff80ff;
+  background-color: rgba(255, 128, 255, 0.8);
   position: relative;
   left: 240px;
+  border-radius: 10px;
+  border: 2px solid #000;
+}
+
+.nyan{
+  width: 135px;
+  height: 70px;
+  position: absolute;
+  top: 140px;
+  background-image: url("../images/nyancat.png");
+  background-size: cover;
+  animation-name: fly;
+  animation-duration: 5s;
+  animation-timing-function: linear;
 }
 
 #game-over{
@@ -66,7 +82,8 @@ body{}
   height: 500px;
   position: absolute;
   top: 220px;
-  background-color: #2eb82e;
+  background-image: url("../images/grass.png");
+  background-size: cover;
 }
 
 .hole{
@@ -74,30 +91,22 @@ body{}
   width: 100px;
   height: 100px;
   position: absolute;
-
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
 }
 
 .active{
-  /*background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;*/
   animation-name: appear;
   animation-duration: 0.5s;
   animation-fill-mode: forwards;
 }
 
 .inactive{
-  /*background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;*/
   animation-name: disappear;
   animation-duration: 0.5s;
   animation-fill-mode: forwards;
 }
-
 
 #hole13{
   margin-left: 55px;
@@ -169,11 +178,16 @@ body{}
 }
 
 @keyframes appear {
-  0% {height: 0px; transform: scale(0);}
-  100%{height: 100px; transform: scale(1);}
+  0% {height: 0px; transform: translate(0, 50px);}
+  100%{height: 100px; transform: translate(0, 0);}
 }
 
 @keyframes disappear {
-  0% {height: 100px; transform: scale(1);}
-  100%{height: 0px; transform: scale(0);}
+  0% {height: 100px; transform: translate(0, 0);}
+  100%{height: 0px; transform: translate(0, 50px);}
+}
+
+@keyframes fly {
+  0% {transform: translate(0);}
+  100%{transform: translate(865px);}
 }
